# orc-plus-plus

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
src/assert/: assert.hpp
src/containers/: vector.hpp
src/core/: container.hpp  orc_export.hpp  orconcepts.hpp  ordefs.hpp  winapi.hpp
src/expected/: expected.hpp
src/floating/: rfloat.hpp
src/iterators/: iterator.hpp  iters.hpp
src/optional/: optional.hpp
src/strings/: rstring.hpp
src/time/: redtime.hpp
src/utilities/: arithmetic.hpp  cmp.hpp  vec.hpp
